<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CargaMascotaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvTituloCargar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_cargar_mascota"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombreMascota"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTituloCargar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_mascota"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelEspecie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_especie"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilNombreMascota" />

        <Spinner
            android:id="@+id/spinnerEspecie"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelEspecie"
            android:entries="@array/especies_array" />

        <TextView
            android:id="@+id/labelEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_estado"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerEspecie" />

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelEstado"
            android:entries="@array/estados_array" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerEstado">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_descripcion"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CAMBIO ahora es un Menú Desplegable -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilZona"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_zona"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDescripcion">

            <AutoCompleteTextView
                android:id="@+id/etZona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:padding="16dp"
                android:text="Caballito"
                />
            <!-- inputType="none" evita que se abra el teclado -->
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContacto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilZona">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contacto"
                android:inputType="text|phone"/>
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/chkCastrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_castrado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilContacto" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar_mascota"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/chkCastrado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>